[package]
name = "catscii"
version = "0.1.0"
edition = "2024"

[dependencies]
artem = { version = "1", default-features = false }
axum = "0.6"
color-eyre = "0.6"
image = "0.24"
pretty-hex = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
